--- a/ITproekt/ITproekt.csproj
+++ b/ITproekt/ITproekt.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\Constants\Roles.cs" />
     <Compile Include="Migrations\202007151659397_Initial.cs" />
     <Compile Include="Migrations\202007151659397_Initial.Designer.cs">
       <DependentUpon>202007151659397_Initial.cs</DependentUpon>
